// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly  1`] = `
.c0 {
  display: inline-block;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  z-index: 1;
  padding: 0.75rem 1.5rem;
  min-width: 240px;
  background: transparent;
  border: none;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.c0::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  -webkit-transform: skew(-21deg);
  -ms-transform: skew(-21deg);
  transform: skew(-21deg);
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.c0::after {
  content: "";
  position: absolute;
  left: 6px;
  top: 6px;
  width: 100%;
  height: 100%;
  background: transparent;
  border: 2px solid;
  z-index: -2;
  -webkit-transform: skew(-21deg);
  -ms-transform: skew(-21deg);
  transform: skew(-21deg);
}

.c0:focus {
  outline: 1px dashed;
}

.c0:focus:not(.focus-visible) {
  outline: none;
}

<Button
  ariaLabel=""
  className="c0"
  disabled={false}
  inheritedStyles=""
  primary={false}
  secondary={false}
  type="button"
/>
`;

exports[`Button should render secondary correctly 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  z-index: 1;
  padding: 0.75rem 1.5rem;
  min-width: 240px;
  background: transparent;
  border: none;
  cursor: pointer;
  opacity: 1;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.c0::before {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  -webkit-transform: skew(-21deg);
  -ms-transform: skew(-21deg);
  transform: skew(-21deg);
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.c0::after {
  content: "";
  position: absolute;
  left: 6px;
  top: 6px;
  width: 100%;
  height: 100%;
  background: transparent;
  border: 2px solid;
  z-index: -2;
  -webkit-transform: skew(-21deg);
  -ms-transform: skew(-21deg);
  transform: skew(-21deg);
}

.c0:focus {
  outline: 1px dashed;
}

.c0:focus:not(.focus-visible) {
  outline: none;
}

.c0::before {
  border: 2px solid;
}

.c0::after {
  content: '';
  border: none;
}

<Button
  ariaLabel=""
  className="c0"
  disabled={false}
  inheritedStyles=""
  primary={false}
  secondary="true"
  type="button"
/>
`;
